--- a/detect_iphone14_pro/index.html
+++ b/detect_iphone14_pro/index.html
@@ -21,8 +21,7 @@
        * To use the library, you need to first specify a license key using the API "license" as shown below.
        */
 
-      Dynamsoft.DBR.BarcodeReader.license =
-        "DLS2eyJoYW5kc2hha2VDb2RlIjoiMTAwNjk3OTA1LTEwMDcyMzMzNiIsIm1haW5TZXJ2ZXJVUkwiOiJodHRwczovL2Nvbm5hcy5keW5hbXNvZnQuY29tLyIsIm9yZ2FuaXphdGlvbklEIjoiMTAwNjk3OTA1Iiwic3RhbmRieVNlcnZlclVSTCI6Imh0dHBzOi8vc2Nvbm5hcy5keW5hbXNvZnQuY29tLyIsImNoZWNrQ29kZSI6LTk4MTA4MzMzOH0=";
+      Dynamsoft.DBR.BarcodeReader.license = "DLS2eyJvcmdhbml6YXRpb25JRCI6IjIwMDAwMSJ9";
 
       /**
        * You can visit https://www.dynamsoft.com/customer/license/trialLicense?utm_source=github&product=dbr&package=js to get your own trial license good for 30 days.
