--- a/florida-driver-license.html
+++ b/florida-driver-license.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
 <body>
     <label style="position:fixed;left:0;bottom:0;z-index:1;">
         <input id="ipt-useSpecialRuntimeSettings" type="checkbox">Use Special RuntimeSettings
