--- a/florida-driver-license.html
+++ b/florida-driver-license.html
@@ -82,107 +82,58 @@
             const deviceResolution = getDeviceResolution();
             console.log(JSON.stringify(deviceResolution));
             if (
+              // iPhone 14 Pro or iPhone 14 Pro Max
               environment.OS === "iPhone" &&
               ((deviceResolution.width == 1179 &&
                 deviceResolution.height == 2556) ||
                 (deviceResolution.width == 1290 &&
                   deviceResolution.height == 2796))
             ) {
-              const rearCameraKeywords = [
-                "back",
-                "後置",
-                "后置",
-                "背面",
-                "خلفية",
-                "Задна",
-                "posterior",
-                "zadní",
-                "bagside",
-                "rück",
-                "Πίσω",
-                "trasera",
-                "taka",
-                "arrière",
-                "אחורית",
-                "बैक",
-                "stražnja",
-                "Hátsó",
-                "belakang",
-                "posteriore",
-                "aртқы",
-                "후면",
-                "bak",
-                "achterzijde",
-                "tylny",
-                "traseira",
-                "spate",
-                "Задняя",
-                "задней",
-                "zadná",
-                "baksidan",
-                "bakre",
-                "านหลัง",
-                "arka",
-                "sau",
+              const backCameraKeywords = [
+                "Back Camera",
+                //TODO
               ];
-              const ultraWideCameraKeywords = [
-                "ultra wide",
-                "超廣角",
-                "超广角",
-                "超広角",
-                "عريضة جدًا",
-                "свръхширокоъгълна",
-                "ultra gran angular",
-                "ultra širokoúhlý",
-                "ultravidvinkel",
-                "ultra-weitwinkelkamera",
-                "υπερευρεία",
-                "ultralaajakulmainen",
-                "très grand angle",
-                "ultra grand angle",
-                "אולטרה רחבה",
-                "अल्ट्रा वाइड",
-                "ultra široka",
-                "ultraszéles látószögű",
-                "ultra lebar",
-                "ultra-grandangolo",
-                "ультра кең бұрышты",
-                "울트라 와이드",
-                "ultralebar",
-                "ultrabrede",
-                "ultraszerokokątny",
-                "ultra-angular",
-                "ultra grande angular",
-                "ultra‑superangular",
-                "сверхширокоугольная",
-                "ultraširokouhlá",
-                "ultravidvinkelkamera",
-                "มุมกว้างอัลตร้า",
-                "ultra geniş",
-                "надширококутна",
-                "cực rộng",
+              const backUltraWideCameraKeywords = [
+                "Back Ultra Wide Camera",
+                //TODO
+              ];
+              const backDualWideCameraKeywords = [
+                "Back Dual Wide Camera",
+                //TODO
+              ];
+              const backDualWideCameraKeywords = [
+                "Back Triple Camera",
+                //TODO
               ];
               const cameras = await scanner.getAllCameras();
-              let backUltraWideCamera;
+              let goodCamera;
+              let goodLv = 0;
               for (let camera of cameras) {
                 const label = camera.label.toLowerCase();
-                if (
-                  rearCameraKeywords.some((keyword) =>
-                    label.includes(keyword)
-                  ) &&
-                  ultraWideCameraKeywords.some((keyword) =>
-                    label.includes(keyword)
-                  )
-                ) {
-                  backUltraWideCamera = camera;
+                if(backDualWideCameraKeywords.some(k=>label.includes(k))){
+                  goodCamera = camera;
+                  goodLv = 4;
                   break;
                 }
+                if(goodLv < 3 && backDualWideCameraKeywords.some(k=>label.includes(k))){
+                  goodCamera = camera;
+                  goodLv = 3;
+                  continue;
+                }
+                if(goodLv < 2 && backUltraWideCameraKeywords.some(k=>label.includes(k))){
+                  goodCamera = camera;
+                  goodLv = 2;
+                  continue;
+                }
+                if(goodLv < 1 && backCameraKeywords.some(k=>label.includes(k))){
+                  goodCamera = camera;
+                  goodLv = 1;
+                  continue;
+                }
               }
-              console.log(JSON.stringify(backUltraWideCamera));
-              if (backUltraWideCamera) {
-                await scanner.setCurrentCamera(backUltraWideCamera);
-              } else {
-                await scanner.setCurrentCamera(cameras[3]);
+              console.log(JSON.stringify(goodCamera));
+              if (goodCamera) {
+                await scanner.setCurrentCamera(goodCamera);
               }
             }
         };
