--- a/florida-driver-license.html
+++ b/florida-driver-license.html
@@ -91,18 +91,30 @@
             ) {
               const backCameraKeywords = [
                 "Back Camera",
+                "Caméra arrière",
+                "后置相机",
+                "背面カメラ",
                 //TODO
               ];
               const backUltraWideCameraKeywords = [
                 "Back Ultra Wide Camera",
+                "Appareil photo ultra grand angle arrière",
+                "后置超广角相机",
+                "背面超広角カメラ",
                 //TODO
               ];
               const backDualWideCameraKeywords = [
                 "Back Dual Wide Camera",
+                "Double appareil photo grand angle arrière",
+                "后置双广角镜头",
+                "背面デュアル広角カメラ",
                 //TODO
               ];
               const backTripleCameraKeywords = [
                 "Back Triple Camera",
+                "Triple appareil photo arrière",
+                "后置三镜头",
+                "背面トリプルカメラ",
                 //TODO
               ];
               const cameras = await scanner.getAllCameras();
