--- a/detect_iphone14_pro/index.html
+++ b/detect_iphone14_pro/index.html
@@ -74,19 +74,19 @@
                 "后置",
                 "背面",
                 "خلفية",
-                "Задна",
+                "задна",
                 "posterior",
                 "zadní",
                 "bagside",
                 "rück",
-                "Πίσω",
+                "πίσω",
                 "trasera",
                 "taka",
                 "arrière",
                 "אחורית",
                 "बैक",
                 "stražnja",
-                "Hátsó",
+                "hátsó",
                 "belakang",
                 "posteriore",
                 "aртқы",
@@ -96,7 +96,7 @@
                 "tylny",
                 "traseira",
                 "spate",
-                "Задняя",
+                "задняя",
                 "задней",
                 "zadná",
                 "baksidan",
