--- a/dbr_then_ddn.html
+++ b/dbr_then_ddn.html
@@ -14,9 +14,15 @@
     Loading...
     <div id="div-ui-container" style="margin-top: 10px;height: 70vh;"></div>
     <div id="normalized-result"></div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/eruda/2.4.1/eruda.min.js"></script>
+<script>
+    eruda.init();
+</script>
+
 <script src="https://npm.scannerproxy.com/cdn/@scannerproxy/ddnjs@0.20230817135300.0/dist/ddn.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/dynamsoft-javascript-barcode@9.6.20/dist/dbr.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/eruda/2.4.1/eruda.min.js"></script>
+
 <script>
     /* Thanks for Code from Ethan */
     
