--- a/use_case_10628/singleFrameMode.html
+++ b/use_case_10628/singleFrameMode.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Single Frame Mode</title>
-    <script src="https://cdn.jsdelivr.net/npm/dynamsoft-javascript-barcode@9.6.30/dist/dbr.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dynamsoft-javascript-barcode@9.6.30-iv-202310102228/dist/dbr.js"></script>
   </head>
   <body>
     <!-- 'eruda' help show console in phone -->
