--- a/dbrjs10-more-camera-timeout.html
+++ b/dbrjs10-more-camera-timeout.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
 <body>
 <script src="https://cdn.jsdelivr.net/npm/dynamsoft-barcode-reader@10.0.21/dist/dbr.bundle.js"></script>
 <div id="cameraViewContainer" style="width: 100%; height: 60vh"></div>
