--- a/ios17.4-camera-test/test.html
+++ b/ios17.4-camera-test/test.html
@@ -45,7 +45,7 @@
     </script>
 
     <script>
-      // Dynamsoft.utils.CameraManager._onLog = console.log;
+      Dynamsoft.utils.CameraManager._onLog = console.log;
       console.log(`version: ${Dynamsoft.utils.CameraManager.version}`);
       console.log(
         `browserInfo: ${JSON.stringify(
