--- a/dbrjs10-more-camera-timeout.html
+++ b/dbrjs10-more-camera-timeout.html
@@ -21,7 +21,7 @@
 
     let view = await Dynamsoft.DCE.CameraView.createInstance();
     let cameraEnhancer = await Dynamsoft.DCE.CameraEnhancer.createInstance(view);
-    cameraEnhancer.cameraOpenTimeout = 60000; // 10s tiemout, default 4s
+    //cameraEnhancer.cameraOpenTimeout = 60000;
     document.querySelector("#cameraViewContainer").append(view.getUIElement());
     router.setInput(cameraEnhancer);
 
