--- a/dbrjs10-dialog.html
+++ b/dbrjs10-dialog.html
@@ -13,7 +13,7 @@
 <!-- we use a inner version of camera enhancer -->
 <script src="https://cdn.jsdelivr.net/npm/iv-dynamsoft-camera-enhancer@4.0.2-iv-202403151422/dist/dce.js"></script>
 
-<div id="cameraViewContainer" style="width:100%;height:60vh;position:fixed;left:0;top:20px;display:none;"></div>
+<!-- <div id="cameraViewContainer" style="width:100%;height:60vh;position:fixed;left:0;top:20px;display:none;"></div> -->
 <button id="btn-scan">scan</button>
 <textarea id="results" style="width: 100%; min-height: 10vh; font-size: 3vmin; overflow: auto" disabled></textarea>
 
@@ -27,35 +27,47 @@
 
   Dynamsoft.License.LicenseManager.initLicense("DLS2eyJvcmdhbml6YXRpb25JRCI6IjIwMDAwMSJ9");
   
+  let router, cameraEnhancer, pRouter;
   document.querySelector('#btn-scan').addEventListener('click', async()=>{
-    document.querySelector("#cameraViewContainer").style.display = '';
 
-    let router = await Dynamsoft.CVR.CaptureVisionRouter.createInstance();
+    await (pRouter = pRouter || (async()=>{
+      router = await Dynamsoft.CVR.CaptureVisionRouter.createInstance();
 
-    let view = await Dynamsoft.DCE.CameraView.createInstance();
-    let cameraEnhancer = await Dynamsoft.DCE.CameraEnhancer.createInstance(view);
-    //cameraEnhancer.cameraOpenTimeout = 60000;
-    document.querySelector("#cameraViewContainer").append(view.getUIElement());
-    router.setInput(cameraEnhancer);
+      let view = await Dynamsoft.DCE.CameraView.createInstance();
+      cameraEnhancer = await Dynamsoft.DCE.CameraEnhancer.createInstance(view);
+      // cameraViewContainer.append(view.getUIElement());
+      let uiElement = view.getUIElement();
+      Object.assign(uiElement.style, {
+        width: '100%',
+        height: '60vh',
+        position: 'fixed',
+        left: '0',
+        top: '40px',
+      });
+      document.body.append(uiElement);
+      router.setInput(cameraEnhancer);
 
-    const resultsContainer = document.querySelector("#results");
-    router.addResultReceiver({ onDecodedBarcodesReceived: (result) => {
-      if (result.barcodeResultItems.length > 0) {
-        resultsContainer.textContent = '';
-        for (let item of result.barcodeResultItems) {
-          resultsContainer.textContent += `${item.formatString}: ${item.text}\n\n`;
+      const resultsContainer = document.querySelector("#results");
+      router.addResultReceiver({ onDecodedBarcodesReceived: (result) => {
+        if (result.barcodeResultItems.length > 0) {
+          resultsContainer.textContent = '';
+          for (let item of result.barcodeResultItems) {
+            resultsContainer.textContent += `${item.formatString}: ${item.text}\n\n`;
+          }
+          router.stopCapturing();
+          cameraEnhancer.close()
         }
-      }
-    }});
+      }});
 
-    let filter = new Dynamsoft.Utility.MultiFrameResultCrossFilter();
-    filter.enableResultCrossVerification(
-      Dynamsoft.Core.EnumCapturedResultItemType.CRIT_BARCODE, true
-    );
-    filter.enableResultDeduplication(
-      Dynamsoft.Core.EnumCapturedResultItemType.CRIT_BARCODE, true
-    );
-    await router.addResultFilter(filter);
+      let filter = new Dynamsoft.Utility.MultiFrameResultCrossFilter();
+      filter.enableResultCrossVerification(
+        Dynamsoft.Core.EnumCapturedResultItemType.CRIT_BARCODE, true
+      );
+      filter.enableResultDeduplication(
+        Dynamsoft.Core.EnumCapturedResultItemType.CRIT_BARCODE, true
+      );
+      await router.addResultFilter(filter);
+    })());
 
     await cameraEnhancer.open();
     await router.startCapturing("ReadSingleBarcode");
