--- a/more-qr-info.html
+++ b/more-qr-info.html
@@ -14,6 +14,15 @@
     />
     <title>Dynamsoft Barcode Reader Sample - Hello World (Read an Image)</title>
     <script src="https://cdn.jsdelivr.net/npm/dynamsoft-barcode-reader@10.2.10-iv-202404011838/dist/dbr.bundle.js"></script>
+    <!-- the bundle.js is same as the following pkgs -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/dynamsoft-core@3.2.10/dist/core.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dynamsoft-license@3.2.10/dist/license.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dynamsoft-utility@1.2.10/dist/utility.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dynamsoft-barcode-reader@10.2.10-iv-202404011838/dist/dbr.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dynamsoft-capture-vision-router@2.0.32/dist/cvr.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dynamsoft-camera-enhancer@4.0.1/dist/dce.js"></script>
+    -->
   </head>
 
   <body>
