--- a/dbrjs10all-resources-loaded.html
+++ b/dbrjs10all-resources-loaded.html
@@ -46,5 +46,9 @@
     await router.startCapturing("ReadSingleBarcode");
   });
 </script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/eruda/2.4.1/eruda.min.js"></script>
+<script>
+  eruda.init();
+</script>
 </body>
 </html>
