--- a/obs-ip-camera.html
+++ b/obs-ip-camera.html
@@ -11,6 +11,7 @@
   <script src="https://cdn.jsdelivr.net/gh/Dynamsoft/easy-barcode-scanner@10.2.1009/dist/easy-barcode-scanner.js"
     data-license=""></script>
   <script>
+    // refer https://github.com/Dynamsoft/easy-barcode-scanner
     let scanner, pScanner;
     document.getElementById('btn-scan').addEventListener('click',async()=>{
       try{
