--- a/obs-ip-camera.html
+++ b/obs-ip-camera.html
@@ -17,13 +17,91 @@
       try{
         scanner = await (pScanner || (pScanner = EasyBarcodeScanner.createInstance()));
 
-        let barcodeSettings = await scanner._cvRouter.getSimplifiedSettings('ReadBarcodes_SpeedFirst');
-        barcodeSettings.barcodeSettings.barcodeFormatIds = 0x04000000;
-        barcodeSettings.barcodeSettings.deblurModes = [0x80,0x8,0,0,0,0,0,0,0];
-        barcodeSettings.barcodeSettings.localizationModes = [2,0,0,0,0,0,0,0];
-        barcodeSettings.barcodeSettings.scaleDownThreshold = 99999;
-        barcodeSettings.barcodeSettings.expectedBarcodesCount = 999;
-        scanner._cvRouter.updateSettings('ReadBarcodes_SpeedFirst', barcodeSettings);
+        scanner._cvRouter.initSettings('{
+    "BarcodeReaderTaskSettingOptions": [
+        {
+            "BarcodeFormatIds": [
+                "BF_QR_CODE"
+            ],
+            "DeblurModes": [
+                {
+                    "Mode": "DM_BASED_ON_LOC_BIN"
+                },
+                {
+                    "Mode": "DM_DIRECT_BINARIZATION"
+                },
+                {
+                    "Mode": "DM_THRESHOLD_BINARIZATION"
+                }
+            ],
+            "ExpectedBarcodesCount": 999,
+            "LocalizationModes": [
+                {
+                    "Mode": "LM_CONNECTED_BLOCKS"
+                }
+            ],
+            "Name": "task-read-barcodes",
+            "StartSection": "ST_REGION_PREDETECTION",
+            "TerminateSetting": {
+                "Section": "ST_NULL",
+                "Stage": "IRUT_NULL"
+            }
+        }
+    ],
+    "CaptureVisionTemplates": [
+        {
+            "ImageROIProcessingNameArray": [
+                "roi-read-barcodes"
+            ],
+            "Name": "ReadBarcodes_Default"
+        }
+    ],
+    "ImageParameterOptions": [
+        {
+            "BinarizationModes": [
+                {
+                    "BinarizationThreshold": -1,
+                    "BlockSizeX": 39,
+                    "BlockSizeY": 39,
+                    "EnableFillBinaryVacancy": 1,
+                    "ThresholdCompensation": 10
+                }
+            ],
+            "GrayscaleTransformationModes": [
+                {
+                    "Mode": "GTM_ORIGINAL"
+                }
+            ],
+            "Name": "ip-read-barcodes",
+            "ScaleDownThreshold": 5000,
+            "ScaleUpModes": [
+                {
+                    "AcuteAngleWithXThreshold": -1,
+                    "LetterHeightThreshold": 0,
+                    "Mode": "SUM_AUTO",
+                    "ModuleSizeThreshold": 0,
+                    "TargetLetterHeight": 0,
+                    "TargetModuleSize": 0
+                }
+            ]
+        }
+    ],
+    "TargetROIDefOptions": [
+        {
+            "Name": "roi-read-barcodes",
+            "TaskSettingNameArray": [
+                "task-read-barcodes"
+            ]
+        }
+    ]
+}')
+        // let barcodeSettings = await scanner._cvRouter.getSimplifiedSettings('ReadBarcodes_SpeedFirst');
+        // barcodeSettings.barcodeSettings.barcodeFormatIds = 0x04000000;
+        // barcodeSettings.barcodeSettings.deblurModes = [0x80,0x8,0,0,0,0,0,0,0];
+        // barcodeSettings.barcodeSettings.localizationModes = [2,0,0,0,0,0,0,0];
+        // barcodeSettings.barcodeSettings.scaleDownThreshold = 99999;
+        // barcodeSettings.barcodeSettings.expectedBarcodesCount = 999;
+        // scanner._cvRouter.updateSettings('ReadBarcodes_SpeedFirst', barcodeSettings);
 
         // pls match OBS output resolution
         // { width: 1920, height: 1080 }
