--- a/obs-ip-camera.html
+++ b/obs-ip-camera.html
@@ -6,17 +6,50 @@
   <title>Document</title>
 </head>
 <body>
-  <button id="btn-scan">scan</button>
+  <button id="btn-scan">scan</button><br>
+  test image: <input id="ipt-file" type="file">
   <script src="https://cdn.jsdelivr.net/npm/dynamsoft-barcode-reader-bundle@10.2.1000/dist/dbr.bundle.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/Dynamsoft/easy-barcode-scanner@10.2.1009/dist/easy-barcode-scanner.js"
     data-license=""></script>
   <script>
     // refer https://github.com/Dynamsoft/easy-barcode-scanner
     let scanner, pScanner;
+
     document.getElementById('btn-scan').addEventListener('click',async()=>{
       try{
         scanner = await (pScanner || (pScanner = EasyBarcodeScanner.createInstance()));
+        updateBarcodeSettings();
 
+        // pls match OBS output resolution
+        // { width: 1920, height: 1080 }
+        // { width: 2560, height: 1440 }
+        // don't change media source size
+        // right click media source -> transform -> reset transform
+        scanner._cameraEnhancer.setResolution({ width: 1920, height: 1080 });
+
+        scanner.onUniqueRead = txt=>console.log(txt);
+
+        await scanner.open();
+      }catch(ex){
+        let errMsg = ex.message || ex;
+        console.error(errMsg);
+        alert(errMsg);
+      }
+    });
+    
+    document.getElementById('ipt-file').addEventListener('change',async function(){
+      scanner = await (pScanner || (pScanner = EasyBarcodeScanner.createInstance()));
+      updateBarcodeSettings();
+
+      let file = this.files[0];
+      this.value = '';
+      let rs = await scanner._cvRouter.capture(file,scanner.templateName);
+      console.log(rs);
+    });
+
+
+    // TODO: https://www.dynamsoft.com/capture-vision/docs/core/parameters/reference/image-parameter/binarization-modes.html?product=dbr
+    function updateBarcodeSettings(){
         scanner._cvRouter.initSettings(`{
             "BarcodeReaderTaskSettingOptions": [
                 {
@@ -57,6 +90,7 @@
                 {
                     "BinarizationModes": [
                         {
+                            "Mode": "BM_LOCAL_BLOCK",
                             "BinarizationThreshold": -1,
                             "BlockSizeX": 39,
                             "BlockSizeY": 39,
@@ -93,29 +127,7 @@
             ]
         }`)
         scanner.templateName = 'ReadBarcodes_Default';
-        
-        // let barcodeSettings = await scanner._cvRouter.getSimplifiedSettings('ReadBarcodes_SpeedFirst');
-        // barcodeSettings.barcodeSettings.barcodeFormatIds = 0x04000000;
-        // barcodeSettings.barcodeSettings.deblurModes = [0x80,0x8,0,0,0,0,0,0,0];
-        // barcodeSettings.barcodeSettings.localizationModes = [2,0,0,0,0,0,0,0];
-        // barcodeSettings.barcodeSettings.scaleDownThreshold = 99999;
-        // barcodeSettings.barcodeSettings.expectedBarcodesCount = 999;
-        // scanner._cvRouter.updateSettings('ReadBarcodes_SpeedFirst', barcodeSettings);
-
-        // pls match OBS output resolution
-        // { width: 1920, height: 1080 }
-        // { width: 2560, height: 1440 }
-        // don't change media source size
-        // right click media source -> transform -> reset transform
-        scanner._cameraEnhancer.setResolution({ width: 1920, height: 1080 });
-
-        await scanner.open();
-      }catch(ex){
-        let errMsg = ex.message || ex;
-        console.error(errMsg);
-        alert(errMsg);
-      }
-    });
+    }
   </script>
 </body>
 </html>
